fix clear button so it's accessible on mobile

--- a/addon/styles/search-field.scss
+++ b/addon/styles/search-field.scss
@@ -23,13 +23,30 @@
 
   .clear {
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    top: 0rem;
+    right: 0rem;
     z-index: 2;
 
-    &, svg {
-      width: 1.125rem;
-      height: 1.125rem;
+    & {
+      width: 2.125rem;
+      height: 2.125rem;
+
+      span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 2.125rem;
+        height: 2.125rem;
+      }
+
+      svg {
+        pointer-events: none;
+        position: absolute;
+        top: 0.5rem;
+        left: 0.5rem;
+        width: 1.125rem;
+        height: 1.125rem;
+      }
     }
 
     &:active {
